QWidgetWindow: Fix handleExposeEvent()

When the associated widget of QWidgetWindow is visible but its
updates are not enabled, avoid marking the widget dirty.

Task-number: QTBUG-25991
Change-Id: Ibeac4c0dfd3198a5174372331e50628b0d3a480d
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>
Reviewed-by: Laszlo Agocs <laszlo.p.agocs@nokia.com>

cregit: 3892ccaca7d16ba056bf7c91cc15522bcf3754a3 https://github.com/qt/qtbase/commit/3892ccaca7d16ba056bf7c91cc15522bcf3754a3